--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'normalize';
 @import 'syntax';
 @import 'variables';
+@import 'font-awesome';
 
 *, *::after, *::before {
   box-sizing: border-box;
