--- a/_includes/head.html
+++ b/_includes/head.html
@@ -82,8 +82,9 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<!-- Font Awesome -->
-	<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/fontawesome.min.css" | prepend: site.baseurl }}">
-	<!-- Styles -->
+    <!-- Font Awesome -->
+    <!-- link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/fontawesome.css" | prepend: site.baseurl }}" -->
+    <link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/all.css" | prepend: site.baseurl }}">
+    <!-- Styles -->
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 </head>
