--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,11 @@
  * 2. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
  */
+
+ /*
+ *= require font-awesome
+ */
+
 html {
   line-height: 1.15;
   /* 1 */
