--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -9,7 +9,7 @@ layout: default
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
       <div class="author-name">{{site.author}}</div>
-      <p>{{site.about-author}}</p>
+      <p>{{site.about-author}}</p><p><a href="https://www.w3schools.com/html/">more...</a></p>
     </div>
   </header> <!-- End Header -->
   <footer>
