--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -22,6 +22,12 @@ layout: default
           <li class="github"><a href="http://github.com/" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
         {% endif %}
 
+        {% if site.social-github %}
+          <li class="github"><a href="http://gist.github.com/{{site.social-github}}" target="_blank"><i class="fab fa-github-alt"></i></a></li>
+        {% else %}
+          <li class="github"><a href="http://gist.github.com/" target="_blank"><i class="fab fa-github-alt" aria-hidden="true"></i></a></li>
+        {% endif %}
+
         {% if site.social-twitter %}
           <li><a href="https://twitter.com/{{ site.social-twitter }}" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
         {% else %}
